tvOS:Use VLCMediaLibraryKit
tvOS: Add unpushed files

Coordinators: Fix conflicting OS Checks

Remote Cells: Hide Progress View when Continue Playback Disabled

VLCAppCoordinator: Drop unused allocWithZone methods, rework the class slightly

tvOSModels: Drop them to start compilation from iOS Models

Models: Start compilation from existing iOS Models

MediaLibraryService: Prepare search paths for tvOS and iOS

VLCAppCoordinator: Unify Coordinator for both OS

tvOS: Rework classes on the basis of unified VLCAppCooordinator

VLCHTTPConnecction: Revert the search path for tvOS

VLCSettingsViewController: Add force rescan feature of medialibrary

MediaLibraryService: Remove force Rescan block os check

VLCNetworkImageView; Handling requesting thumbnail logic here

VlCNetworkImageView: Remove comments

tvOS: Invalidate previous thmubnails from cache on tvOS when requesting new one

tvOS: Fix header cyclic dependancy

iOS: Fix OS Builds

VLCNetworkImageView: Compile header on the basis of OS

tvOS: Add Sorting Support , Playlist UI + Edit Selection Mode

VLCRemotePlaybackView: Improve Edit Selection View UI to Handle new Case

VLCRemotePlaybackViewController Xib: Improve Edit and Sort Button Constraints

MediaLibraryModel: Remove Enable sort compilation on tvOS

PlaylistViewController: Add Searching Support for Playlist

PlaylistMediaViewController: Enable Searching for Playlist's Media

VLCRemotePlaybackViewController: Add Search Bar, and Searching functionality

tvOS Search Bars: Enable renaming and deletion for media, playlist while searching them

SortingHandler: Rework to make code more maintainable

tvOS ViewControllers: Apply Code Cosmetic Changes, add pragma marks

PlaylistViewController: Handle empty  count warning

Use png format sort Icon present already

Use png format sort Icon present already

tvOS: Rebase, Remove old media management classes

VLCNetworkImageView: Resolve header issues

Podfile: Use Patch

tvOS: Rebase

Sirikit:  Rebase

tvOS: Resolve more C

--- a/Resources/tvOS/Settings.bundle/Root.inApp.plist
+++ b/Resources/tvOS/Settings.bundle/Root.inApp.plist
@@ -8,7 +8,29 @@
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
+			<string>Medialibrary</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>IASKButtonSpecifier</string>
+			<key>Title</key>
+			<string>SETTINGS_MEDIA_LIBRARY_RESCAN</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
 			<string>SETTINGS_GENERIC_TITLE</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Continue Media Playback</string>
+			<key>Key</key>
+			<string>continuemediaPlayback</string>
+			<key>DefaultValue</key>
+			<true/>
 		</dict>
 		<dict>
 			<key>Type</key>
