SettingsController: Add a Setting to enable the automatic scroll
This setting is disabled by default and once enabled, the view will
automatically scroll to the currently playing media.

--- a/Resources/iOS/Settings.bundle/Root.plist
+++ b/Resources/iOS/Settings.bundle/Root.plist
@@ -144,6 +144,16 @@
 		</dict>
 		<dict>
 			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>SETTINGS_ENABLE_SCROLL_TO_CURRENTLY_PLAYING_MEDIA</string>
+			<key>Key</key>
+			<string>kVLCSettingEnableScrollToCurrentlyPlayingMedia</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
 			<string>SETTINGS_GESTURES</string>
