fix: changes default main to correct master

--- a/.github/workflows/sync-from-upstream.yml
+++ b/.github/workflows/sync-from-upstream.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Rebase onto upstream/master
         run: |
-          git checkout main
+          git checkout master
           git rebase upstream/master
 
       - name: Push changes to GitHub
