--- a/.github/workflows/sync-from-upstream.yml
+++ b/.github/workflows/sync-from-upstream.yml
@@ -35,4 +35,5 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
+          echo "Using remote: https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}"
           git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }} HEAD:master
