--- a/.github/workflows/sync-from-upstream.yml
+++ b/.github/workflows/sync-from-upstream.yml
@@ -32,8 +32,6 @@ jobs:
           git rebase upstream/master
 
       - name: Push changes to GitHub
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          echo "Using remote: https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}"
-          git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }} HEAD:master
+          echo "Using remote: https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}"
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} HEAD:master
