--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Use modified podfile
         run: |
-          run: cp Podfile_modified Podfile
+          cp Podfile_modified Podfile
 
       - name: Show Podfile (for debugging)
         run: cat Podfile
