--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Cache CocoaPods
+        id: pod-cache
         uses: actions/cache@v4
         with:
           path: |
@@ -23,9 +24,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pods-
 
-      - name: Use modified podfile
+      - name: Clean CocoaPods Cache if Restore Failed
+        if: steps.pod-cache.outputs.cache-hit != 'true'
         run: |
-          cp Podfile_modified Podfile
+          rm -rf Pods
+          rm -rf ~/Library/Caches/CocoaPods
 
       - name: Show Podfile (for debugging)
         run: cat Podfile
@@ -33,7 +36,13 @@ jobs:
       - name: Install CocoaPods
         run: |
           sudo gem install cocoapods
-          pod install
+          pod install --verbose
+          pod install --repo-update --verbose
+
+      - name: Verify Pod Installation
+        run: |
+          test -d "Pods/MarqueeLabel" || exit 1
+          ls -la Pods/MarqueeLabel
 
       - name: Ensure Pods scripts are executable
         run: |
@@ -49,7 +58,10 @@ jobs:
                      CODE_SIGN_IDENTITY="" \
                      CODE_SIGNING_REQUIRED=NO \
                      CODE_SIGNING_ALLOWED=NO \
+                     CLANG_ENABLE_MODULES=YES \
+                     DEFINES_MODULE=YES \
                      OTHER_CFLAGS="-Wno-error=non-modular-include-in-framework-module" \
+                     SWIFT_ENABLE_BATCH_MODE=NO \
                      archive
 
       - name: Upload Archive
