--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -1,4 +1,4 @@
-name: Build IPA (Checkpointed)
+name: Build IPA
 
 on:
   workflow_dispatch:
@@ -9,9 +9,14 @@ on:
 jobs:
   build:
     runs-on: macos-13
-
+    
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '15.0'
 
       - name: Cache CocoaPods
         id: pod-cache
@@ -20,35 +25,29 @@ jobs:
           path: |
             Pods
             ~/Library/Caches/CocoaPods
-          key: ${{ runner.os }}-pods-${{ hashFiles('Podfile.lock') }}
+          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-pods-
 
-      - name: Clean CocoaPods Cache if Restore Failed
-        if: steps.pod-cache.outputs.cache-hit != 'true'
-        run: |
-          rm -rf Pods
-          rm -rf ~/Library/Caches/CocoaPods
-
-      - name: Show Podfile (for debugging)
-        run: cat Podfile
-
       - name: Install CocoaPods
         run: |
-          sudo gem install cocoapods
+          gem install cocoapods
+          pod repo update
+          rm -rf Pods Podfile.lock
           pod install --verbose
-          pod install --repo-update --verbose
 
-      - name: Verify Pod Installation
+      - name: Pre-build setup
         run: |
-          test -d "Pods/MarqueeLabel" || exit 1
-          ls -la Pods/MarqueeLabel
+          cd Pods/MarqueeLabel
+          mkdir -p "Pods/MarqueeLabel/Framework/MarqueeLabel.framework/Modules"
+          touch "Pods/MarqueeLabel/Framework/MarqueeLabel.framework/Modules/module.modulemap"
+          echo 'framework module MarqueeLabel {' > "Pods/MarqueeLabel/Framework/MarqueeLabel.framework/Modules/module.modulemap"
+          echo '  umbrella header "MarqueeLabel.h"' >> "Pods/MarqueeLabel/Framework/MarqueeLabel.framework/Modules/module.modulemap"
+          echo '  export *' >> "Pods/MarqueeLabel/Framework/MarqueeLabel.framework/Modules/module.modulemap"
+          echo '  module * { export * }' >> "Pods/MarqueeLabel/Framework/MarqueeLabel.framework/Modules/module.modulemap"
+          echo '}' >> "Pods/MarqueeLabel/Framework/MarqueeLabel.framework/Modules/module.modulemap"
 
-      - name: Ensure Pods scripts are executable
-        run: |
-          find Pods/Target\ Support\ Files -name "*.sh" -exec chmod +x {} \;
-
-      - name: Build with Xcode
+      - name: Build Archive
         run: |
           xcodebuild -workspace VLC.xcworkspace \
                      -scheme VLC-iOS \
@@ -60,6 +59,7 @@ jobs:
                      CODE_SIGNING_ALLOWED=NO \
                      CLANG_ENABLE_MODULES=YES \
                      DEFINES_MODULE=YES \
+                     MODULEMAP_FILE="$(pwd)/Pods/MarqueeLabel/Framework/MarqueeLabel.framework/Modules/module.modulemap" \
                      OTHER_CFLAGS="-Wno-error=non-modular-include-in-framework-module" \
                      SWIFT_ENABLE_BATCH_MODE=NO \
                      archive
