--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -1,4 +1,4 @@
-name: Build IPA
+name: Build IPA (Checkpointed)
 
 on:
   workflow_dispatch:
@@ -9,14 +9,14 @@ on:
 jobs:
   build:
     runs-on: macos-13
-    
+
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Setup Xcode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '15.0.1'
+
+      - name: Install CocoaPods & deintegrate
+        run: |
+          sudo gem install cocoapods cocoapods-deintegrate
+          pod deintegrate || true
 
       - name: Cache CocoaPods
         id: pod-cache
@@ -25,22 +25,25 @@ jobs:
           path: |
             Pods
             ~/Library/Caches/CocoaPods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          key: ${{ runner.os }}-pods-${{ hashFiles('Podfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-pods-
 
-      - name: Install CocoaPods
+      - name: Clean CocoaPods cache if restore failed
+        if: steps.pod-cache.outputs.cache-hit != 'true'
         run: |
-          gem install cocoapods
-          pod repo update
-          rm -rf Pods Podfile.lock
-          pod install --verbose
-          
-      - name: Set Xcode Build Settings
+          rm -rf Pods
+          rm -rf ~/Library/Caches/CocoaPods
+
+      - name: Install Pods (clean)
         run: |
-          defaults write com.apple.dt.XCBuild EnableSwiftBuildSystemIntegration 1
-          
-      - name: Build Archive
+          pod install --repo-update --verbose
+
+      - name: Ensure Pod scripts are executable
+        run: |
+          find Pods/Target\ Support\ Files -name "*.sh" -exec chmod +x {} \;
+
+      - name: Build with Xcode
         run: |
           xcodebuild -workspace VLC.xcworkspace \
                      -scheme VLC-iOS \
@@ -50,13 +53,7 @@ jobs:
                      CODE_SIGN_IDENTITY="" \
                      CODE_SIGNING_REQUIRED=NO \
                      CODE_SIGNING_ALLOWED=NO \
-                     CLANG_ENABLE_MODULES=YES \
-                     DEFINES_MODULE=YES \
-                     SWIFT_OPTIMIZATION_LEVEL="-Onone" \
-                     SWIFT_COMPILATION_MODE=wholemodule \
-                     SWIFT_TREAT_WARNINGS_AS_ERRORS=NO \
                      OTHER_CFLAGS="-Wno-error=non-modular-include-in-framework-module" \
-                     SWIFT_VERSION=5.0 \
                      archive
 
       - name: Upload Archive
