--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -9,37 +9,24 @@ on:
 jobs:
   build:
     runs-on: macos-13
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install CocoaPods & deintegrate
+      - name: Clean DerivedData, Module Cache, Pods
         run: |
-          sudo gem install cocoapods cocoapods-deintegrate
-          pod deintegrate || true
-
-      - name: Cache CocoaPods
-        id: pod-cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            Pods
-            ~/Library/Caches/CocoaPods
-          key: ${{ runner.os }}-pods-${{ hashFiles('Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
-
-      - name: Clean CocoaPods cache if restore failed
-        if: steps.pod-cache.outputs.cache-hit != 'true'
-        run: |
+          rm -rf ~/Library/Developer/Xcode/DerivedData
+          rm -rf ~/Library/Developer/Xcode/ModuleCache.noindex
           rm -rf Pods
           rm -rf ~/Library/Caches/CocoaPods
+          brew install cocoapods-deintegrate || true
+          pod deintegrate || true
 
-      - name: Install Pods (clean)
+      - name: Install CocoaPods
         run: |
+          sudo gem install cocoapods
           pod install --repo-update --verbose
 
-      - name: Ensure Pod scripts are executable
+      - name: Fix Permissions on Pod Scripts
         run: |
           find Pods/Target\ Support\ Files -name "*.sh" -exec chmod +x {} \;
 
