refactor: Enhance CocoaPods installation and build settings for MarqueeLabel

--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -19,29 +19,34 @@ jobs:
           rm -rf Pods
           rm -rf ~/Library/Caches/CocoaPods
           brew install cocoapods-deintegrate || true
-          pod deintegrate || true
 
       - name: Install CocoaPods
         run: |
           sudo gem install cocoapods
-          pod install --repo-update --verbose
+          pod deintegrate
+          pod cache clean --all
+          pod install --repo-update
 
       - name: Fix Permissions on Pod Scripts
         run: |
           find Pods/Target\ Support\ Files -name "*.sh" -exec chmod +x {} \;
 
-      - name: Build with Xcode
-        run: |
-          xcodebuild -workspace VLC.xcworkspace \
-                     -scheme VLC-iOS \
-                     -configuration Release \
-                     -sdk iphoneos \
-                     -archivePath $PWD/build/VLC.xcarchive \
-                     CODE_SIGN_IDENTITY="" \
-                     CODE_SIGNING_REQUIRED=NO \
-                     CODE_SIGNING_ALLOWED=NO \
-                     OTHER_CFLAGS="-Wno-error=non-modular-include-in-framework-module" \
-                     archive
+          - name: Build with Xcode
+          run: |
+            xcodebuild -workspace VLC.xcworkspace \
+                       -scheme VLC-iOS \
+                       -configuration Release \
+                       -sdk iphoneos \
+                       -archivePath $PWD/build/VLC.xcarchive \
+                       CODE_SIGN_IDENTITY="" \
+                       CODE_SIGNING_REQUIRED=NO \
+                       CODE_SIGNING_ALLOWED=NO \
+                       SWIFT_ENABLE_BATCH_MODE=NO \
+                       CLANG_ENABLE_MODULES=YES \
+                       DEFINES_MODULE=YES \
+                       OTHER_CFLAGS="-Wno-error=non-modular-include-in-framework-module" \
+                       SWIFT_COMPILATION_MODE=wholemodule \
+                       archive
 
       - name: Upload Archive
         uses: actions/upload-artifact@v4
